[package]
name = "rust-hypertls-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = { version = "0.1.9", default-features = false, features = ["client-legacy", "tokio","server-auto"]}
rustls = "0.23.13"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.9.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
